--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@react-aria/focus": "^3.14.2",
+    "@react-aria/radio": "^3.8.1",
+    "@react-stately/radio": "^3.9.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
